codex-rs/tui/src/app_shell/snapshots/codex_tui__app_shell__diff_view_view__tests__compact_diff_popup.snap
---
source: tui/src/app_shell/diff_view_view_tests.rs
expression: compact
---


  ╭ Session edits ─────────────────────────────────╮
  │ CHANGED FILES│OLD FILE       │NEW FILE         │
  │              │               │src/app_shell/n… │
  │   M diff_vie…│               │    1 + pub fn … │
  │ > A new_file…│               │    2 +     pri… │
  │   D old_file…│               │    3 + }        │
  │   R before.r…│               │                 │
  │              │               │                 │
  │              │               │                 │
  │              │               │                 │
  │  ←/→ files  ↑/↓ scroll  Esc  file 2/4  1-3/3   │
  ╰────────────────────────────────────────────────╯
